--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -798,24 +798,30 @@ $popover-arrow-outer-color:           fade-in($popover-border-color, .05) !defau
 
 // Badges
 
-$badge-default-bg:            $gray-light !default;
-$badge-primary-bg:            $brand-primary !default;
-$badge-success-bg:            $brand-success !default;
-$badge-info-bg:               $brand-info !default;
-$badge-warning-bg:            $brand-warning !default;
-$badge-danger-bg:             $brand-danger !default;
+$badge-default-bg:             $gray-light !default;
+$badge-default-hover-focus-bg: darken($badge-default-bg, 10%) !default;
+$badge-primary-bg:             $brand-primary !default;
+$badge-primary-hover-focus-bg: darken($badge-primary-bg, 10%) !default;
+$badge-success-bg:             $brand-success !default;
+$badge-success-hover-focus-bg: darken($badge-success-bg, 10%) !default;
+$badge-info-bg:                $brand-info !default;
+$badge-info-hover-focus-bg:    darken($badge-info-bg, 10%) !default;
+$badge-warning-bg:             $brand-warning !default;
+$badge-warning-hover-focus-bg: darken($badge-warning-bg, 10%) !default;
+$badge-danger-bg:              $brand-danger !default;
+$badge-danger-hover-focus-bg:  darken($badge-danger-bg, 10%) !default;
 
-$badge-color:                 $white !default;
-$badge-link-hover-color:      $white !default;
-$badge-font-size:             75% !default;
-$badge-font-weight:           $font-weight-bold !default;
-$badge-padding-x:             .4em !default;
-$badge-padding-y:             .25em !default;
+$badge-color:                  $white !default;
+$badge-link-hover-color:       $white !default;
+$badge-font-size:              75% !default;
+$badge-font-weight:            $font-weight-bold !default;
+$badge-padding-x:              .4em !default;
+$badge-padding-y:              .25em !default;
 
-$badge-pill-padding-x:        .6em !default;
+$badge-pill-padding-x:         .6em !default;
 // Use a higher than normal value to ensure completely rounded edges when
 // customizing padding or font-size on labels.
-$badge-pill-border-radius:    10rem !default;
+$badge-pill-border-radius:     10rem !default;
 
 
 // Modals
