--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -723,20 +723,24 @@ $jumbotron-bg:                   $gray-lighter !default;
 $state-success-text:             #3c763d !default;
 $state-success-bg:               #dff0d8 !default;
 $state-success-border:           darken($state-success-bg, 5%) !default;
+$state-success-hover-bg:         darken($state-success-bg, 5%) !default;
 
 $state-info-text:                #31708f !default;
 $state-info-bg:                  #d9edf7 !default;
 $state-info-border:              darken($state-info-bg, 7%) !default;
+$state-info-hover-bg:            darken($state-info-bg, 5%) !default;
 
 $state-warning-text:             #8a6d3b !default;
 $state-warning-bg:               #fcf8e3 !default;
-$mark-bg:                        $state-warning-bg !default;
 $state-warning-border:           darken($state-warning-bg, 5%) !default;
+$state-warning-hover-bg:         darken($state-warning-bg, 5%) !default;
 
 $state-danger-text:              #a94442 !default;
 $state-danger-bg:                #f2dede !default;
 $state-danger-border:            darken($state-danger-bg, 5%) !default;
+$state-danger-hover-bg:          darken($state-danger-bg, 5%) !default;
 
+$mark-bg:                        $state-warning-bg !default;
 
 // Cards
 
