--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -92,11 +92,11 @@
 // inheritance to nested tables.
 
 // Generate the contextual variants
-@include table-row-variant(active, $table-bg-active);
-@include table-row-variant(success, $state-success-bg);
-@include table-row-variant(info, $state-info-bg);
-@include table-row-variant(warning, $state-warning-bg);
-@include table-row-variant(danger, $state-danger-bg);
+@include table-row-variant(active, $table-bg-active, $table-bg-active-hover);
+@include table-row-variant(success, $state-success-bg, $state-success-hover-bg);
+@include table-row-variant(info, $state-info-bg, $state-info-hover-bg);
+@include table-row-variant(warning, $state-warning-bg, $state-warning-hover-bg);
+@include table-row-variant(danger, $state-danger-bg, $state-danger-hover-bg);
 
 
 // Inverse styles
