--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -3,7 +3,7 @@
 // Used in _forms.scss to generate the form validation CSS for warnings, errors,
 // and successes.
 
-@mixin form-control-validation($color) {
+@mixin form-control-validation($color, $focus-shadow, $addon-bg) {
   // Color the label and help text
   .form-control-feedback,
   .form-control-label,
@@ -18,7 +18,7 @@
     border-color: $color;
 
     &:focus {
-      @include box-shadow($input-box-shadow, 0 0 6px lighten($color, 20%));
+      @include box-shadow($input-box-shadow, $focus-shadow);
     }
   }
 
@@ -26,7 +26,7 @@
   .input-group-addon {
     color: $color;
     border-color: $color;
-    background-color: lighten($color, 40%);
+    background-color: $addon-bg;
   }
 }
 
