Add variables to jumbotron separator

--- a/scss/_jumbotron.scss
+++ b/scss/_jumbotron.scss
@@ -10,7 +10,7 @@
 }
 
 .jumbotron-hr {
-  border-top-color: darken($jumbotron-bg, 10%);
+  border-top-color: $jumbotron-separator;
 }
 
 .jumbotron-fluid {
