--- a/scss/_popover.scss
+++ b/scss/_popover.scss
@@ -133,7 +133,7 @@
   margin-bottom: 0; // Reset the default from Reboot
   font-size: $font-size-base;
   background-color: $popover-title-bg;
-  border-bottom: $popover-border-width solid darken($popover-title-bg, 5%);
+  border-bottom: $popover-border-width solid $popover-title-separator;
   $offset-border-width: calc(#{$border-radius-lg} - #{$popover-border-width});
   @include border-top-radius($offset-border-width);
 
