--- a/scss/mixins/_table-row.scss
+++ b/scss/mixins/_table-row.scss
@@ -1,9 +1,10 @@
 // Tables
 
-@mixin table-row-variant($state, $background) {
+@mixin table-row-variant($parent, $state, $background, $hover-background) {
+
   // Exact selectors below required to override `.table-striped` and prevent
   // inheritance to nested tables.
-  .table-#{$state} {
+  #{$parent} .table-#{$state} {
     &,
     > th,
     > td {
@@ -13,9 +14,7 @@
 
   // Hover states for `.table-hover`
   // Note: this is not available for cells or rows within `thead` or `tfoot`.
-  .table-hover {
-    $hover-background: darken($background, 5%);
-
+  #{$parent}.table-hover {
     .table-#{$state} {
       @include hover {
         background-color: $hover-background;
