--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -145,6 +145,16 @@ fieldset[disabled] a.btn {
   @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $font-size-sm, $btn-border-radius-sm);
 }
 
+//
+// Button Pill
+//
+
+
+.btn-pill {
+  @include border-radius($button-pill-border-radius);
+}
+
+
 
 //
 // Block button
