--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -142,6 +142,7 @@
 
 .table-responsive {
   display: block;
+  width: 100%;
   overflow-x: auto;
   -ms-overflow-style: -ms-autohiding-scrollbar; // See https://github.com/twbs/bootstrap/pull/10057
 
