--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -12,7 +12,7 @@
 
 .nav-link {
   display: block;
-  padding: $nav-link-padding;
+  padding: $nav-link-padding-y $nav-link-padding-x;
 
   @include hover-focus {
     text-decoration: none;
