Make container within nabber static

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -20,6 +20,10 @@
   display: flex;
   flex-direction: column;
   padding: $navbar-padding-y $navbar-padding-x;
+
+  > .container {
+    position: static;
+  }
 }
 
 
