Get this party started by removing mention of Normalize.css

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -2,8 +2,7 @@
 
 // Reboot
 //
-// Global resets to common HTML elements and more for easier usage by Bootstrap.
-// Adds additional rules on top of Normalize.css, including several overrides.
+// Normalization and global resets to common HTML elements.
 
 
 // Reset the box-sizing
