Move margin override for body element from Normalize to Reboot

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -70,6 +70,7 @@ html {
 }
 
 body {
+  margin: 0; // Remove the margin in all browsers.
   font-family: $font-family-base;
   font-size: $font-size-base;
   font-weight: $font-weight-base;
