--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -155,6 +155,28 @@ blockquote {
 
 
 //
+// Prevent `sub` and `sup` elements from affecting the line height in
+// all browsers.
+//
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+
+//
 // Links
 //
 
