--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -11,6 +11,9 @@
 // 2. Change the default font family in all browsers.
 // 3. Correct the line height in all browsers.
 // 4. Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.
+// 5. Setting @viewport causes scrollbars to overlap content in IE11 and Edge, so
+//    we force a non-overlapping, non-auto-hiding scrollbar to counteract.
+// 6. Change the default tap highlight to be completely transparent in iOS.
 
 html {
   box-sizing: border-box; // 1
@@ -18,6 +21,8 @@ html {
   line-height: 1.15; // 3
   -ms-text-size-adjust: 100%; // 4
   -webkit-text-size-adjust: 100%; // 4
+  -ms-overflow-style: scrollbar; // 5
+  -webkit-tap-highlight-color: rgba(0,0,0,0); // 6
 }
 
 *,
@@ -36,14 +41,6 @@ html {
 //
 // Reset HTML, body, and more
 //
-
-html {
-  // Setting @viewport causes scrollbars to overlap content in IE11 and Edge, so
-  // we force a non-overlapping, non-auto-hiding scrollbar to counteract.
-  -ms-overflow-style: scrollbar;
-  // Changes the default tap highlight to be completely transparent in iOS.
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
 
 body {
   margin: 0; // Remove the margin in all browsers.
