--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -38,20 +38,19 @@ html {
 }
 
 
+// Body
 //
-// Reset HTML, body, and more
-//
+// 1. Remove the margin in all browsers.
+// 2. As a best practice, apply a default `background-color`.
 
 body {
-  margin: 0; // Remove the margin in all browsers.
+  margin: 0; // 1
   font-family: $font-family-base;
   font-size: $font-size-base;
   font-weight: $font-weight-base;
   line-height: $line-height-base;
-  // Go easy on the eyes and use something other than `#000` for text
   color: $body-color;
-  // By default, `<body>` has no `background-color` so we set one as a best practice.
-  background-color: $body-bg;
+  background-color: $body-bg; // 2
 }
 
 // Suppress the focus outline on elements that cannot be accessed via keyboard.
