move over hr changes

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -63,6 +63,18 @@ body {
 }
 
 
+// Content grouping
+//
+// 1. Add the correct box sizing in Firefox.
+// 2. Show the overflow in Edge and IE.
+
+hr {
+  box-sizing: content-box; // 1
+  height: 0; // 1
+  overflow: visible; // 2
+}
+
+
 //
 // Typography
 //
