--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -367,6 +367,16 @@ select {
   text-transform: none; // Remove the inheritance of text transform in Firefox
 }
 
+// 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+//    controls in Android 4.
+// 2. Correct the inability to style clickable types in iOS and Safari.
+button,
+html [type="button"], // 1
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; // 2
+}
+
 input[type="radio"],
 input[type="checkbox"] {
   // Apply a disabled cursor for radios and checkboxes.
