--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -2,7 +2,8 @@
 
 // Reboot
 //
-// Normalization and global resets to common HTML elements.
+// Normalization of HTML elements, manually forked from Normalize.css to remove
+// styles targeting irrelevant browsers while applying new styles.
 
 
 // `<html>`
