Enable EmptyLineBetweenBlocks linter
The use of empty line between blocks was quite inconsistent, this linter
will increase the uniformity of the code.

--- a/scss/_breadcrumb.scss
+++ b/scss/_breadcrumb.scss
@@ -25,12 +25,14 @@
   //
   // To trick IE into suppressing the underline, we give the pseudo-element an
   // underline and then immediately remove it.
+  // scss-lint:disable EmptyLineBetweenBlocks
   + .breadcrumb-item:hover::before {
     text-decoration: underline;
   }
   + .breadcrumb-item:hover::before {
     text-decoration: none;
   }
+  // scss-lint:enable EmptyLineBetweenBlocks
 
   &.active {
     color: $breadcrumb-active-color;
