callout license since we forked part of normalize

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -4,6 +4,8 @@
 //
 // Normalization of HTML elements, manually forked from Normalize.css to remove
 // styles targeting irrelevant browsers while applying new styles.
+//
+// Normalize is licensed MIT. https://github.com/necolas/normalize.css
 
 
 // `<html>`
