--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -6,7 +6,8 @@
   width: 100%;
   max-width: 100%;
   margin-bottom: $spacer;
-
+  background-color: $table-bg; // Reset for nesting within parents with `background-color`.
+  
   th,
   td {
     padding: $table-cell-padding;
