--- a/scss/utilities/_text.scss
+++ b/scss/utilities/_text.scss
@@ -32,6 +32,12 @@
 .font-weight-bold   { font-weight: $font-weight-bold; }
 .font-italic        { font-style: italic; }
 
+// Size
+
+.font-size-sm { font-size: $font-size-sm; }
+.font-size-normal { font-size: $font-size-sm; }
+.font-size-lg   { font-size: $font-size-lg; }
+
 // Contextual colors
 
 .text-white {
