Clarify dependency to nav, mentioned both <ul> and <nav> markup and add an example with sub-nabs

--- a/docs/assets/scss/_component-examples.scss
+++ b/docs/assets/scss/_component-examples.scss
@@ -298,6 +298,13 @@
   overflow: auto;
 }
 
+.scrollspy-example-2 {
+  position: relative;
+  height: 450px;
+  margin-top: .5rem;
+  overflow: auto;
+}
+
 // Helpers
 .bd-example > {
   .bg-primary,
