Make tabs works with both <nav> and <ul> markup

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -40,7 +40,8 @@
 .nav-tabs {
   border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;
 
-  .nav-item {
+  .nav-item,
+  .nav-link {
     margin-bottom: -$nav-tabs-border-width;
   }
 
